f --compatibility-eth64-forkid-enabled is set to true
Signed-off-by: stefan.pingel@consensys.net <stefan.pingel@consensys.net>