@@ -79,22 +79,20 @@ public class ForkIdManager {
             .sorted()
             .collect(Collectors.toUnmodifiableList());
     final List<Long> allForkNumbers =
-        Stream.concat(blockNumberForks.stream(), timestampForks.stream())
-            .collect(Collectors.toList());
+        Stream.concat(blockNumberForks.stream(), timestampForks.stream()).toList();
     this.forkNext = createForkIds();
     this.allForkIds =
         Stream.concat(blockNumbersForkIds.stream(), timestampsForkIds.stream())
             .collect(Collectors.toList());
     this.noForksAvailable = allForkIds.isEmpty();
-    this.highestKnownFork =
-        !allForkNumbers.isEmpty() ? allForkNumbers.get(allForkNumbers.size() - 1) : 0L;
+    this.highestKnownFork = !allForkNumbers.isEmpty() ? allForkNumbers.getLast() : 0L;
   }
 
   public ForkId getForkIdForChainHead() {
     if (legacyEth64) {
       return blockNumbersForkIds.isEmpty()
-          ? null
-          : blockNumbersForkIds.get(blockNumbersForkIds.size() - 1);
+          ? new ForkId(genesisHashCrc, 0)
+          : blockNumbersForkIds.getLast();
     }
     final BlockHeader header = chainHeadSupplier.get();
     for (final ForkId forkId : blockNumbersForkIds) {
@@ -107,9 +105,7 @@ public class ForkIdManager {
         return forkId;
       }
     }
-    return allForkIds.isEmpty()
-        ? new ForkId(genesisHashCrc, 0)
-        : allForkIds.get(allForkIds.size() - 1);
+    return allForkIds.isEmpty() ? new ForkId(genesisHashCrc, 0) : allForkIds.getLast();
   }
 
   @VisibleForTesting
